--- a/Robot-Dog/frontend/web_example/app/src/main/res/values/strings.xml
+++ b/Robot-Dog/frontend/web_example/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">http_example</string>
+    <string name="title_activity_new">NewActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
